css/main.css
/* Colors
Dark Grey - #363636
Light Grey - #ccc
Pullman Green - #3C321E
Hirzel Green - #28A028
Hirzel-La Orange- #D98B07
Blue - #0078AA
BNSF Gold - #F0B414
Mustard - #D9B507
Taupe - #F2CA5D
*/

/* Tweak Selected Bootstrap Styles */
body {
  font-weight: 200;
}
a:link, a:visited, a:hover, a:active {
  text-decoration: none;
  color: #28A028;
}
.container {
  padding-left: 50px;
}

/* Create #site-wrapper #site-canvas and #site-menu to accommodate sliding nav */
#site-wrapper {
  position: relative;
  overflow: hidden;
  width: 100%;
}
#site-canvas {
  width: 100%;
  position: relative;
  top: 0;
  left: 0;
  background-color: white;
  transform: translateX(0);
  transition: 0.3s ease all;
}
#site-menu {
  width: 300px;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0px;
  z-index: -50;
  background: purple;
  padding-left: 55px;
  padding-top: 50px;
  padding-bottom: 10px;
  padding-right: 10px;
}
#site-wrapper.show-nav #site-canvas {
  transform: translateX(300px);
}

/* Create .hamburger to style and locate the menu button */
.hamburger {
  position: fixed;
  top: 10px;
  left: 15px;
  z-index: 100;
}
/* To keep page scroll anchors from being at the tippy top */
.anchor {
    padding-top: 10px;
}

/* Mod of existing .jumbotron to make it 100vh and play nicely with sticky nav and to add ability to position elements within*/
.jumbotron {
    position: relative;
    height: 100vh;
    min-height: 650px;
    padding-top: 50px;
    margin: 0;
}
@media (max-width: 767px) {
  .jumbotron p {
    font-size: 14px;
  }
}

/* Create .jumbotron-flex to have a flex height but behave along the lines of modded .jumbotron */
.jumbotron-flex {
    height: auto;
    min-height: 300px;
}


/* Class to vertically cetner things in the viewport */
.vcenter {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

/* Class to add bottom center nav helper buttons */
.btm-btn {
  position: absolute;
  bottom: 0px;
  left: 50%;
  font-size: 5rem;
}

/* Class to make social icons from Simple-Line-Icons larger */
.soc-btn {
  display: inline-block;
  margin: 0px 10px 0px 0px;
  font-size: 4rem;
}

/* Class to make items shrink on hover */
.hvr-shrink {
  transition-duration: 0.1s;
}
.hvr-shrink:hover, .hvr-shrink:focus, .hvr-shrink:active, .hvr-shrink a:hover, .hvr-shrink a:focus, .hvr-shrink a:active {
  transform: scale(0.9,0.9);
}

